--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ body {
 
 .do-card img,
 .team-card img,
-.portfolio-img {
+.portfolio-card img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -242,6 +242,7 @@ body {
 
 .portfolio-button {
   display: inline-block;
+  margin-bottom: 50px;
 }
 
 .portfolio-button a {
@@ -252,7 +253,7 @@ body {
   text-decoration: none;
   cursor: pointer;
   border-radius: 4px;
-  padding: 9px 46px 10px;
+  padding: 9px 27.5px 10px;
   height: 26px;
 }
 
@@ -271,11 +272,15 @@ body {
   flex-wrap: wrap;
   gap: 30px;
 }
+.portfolio-card img {
+  height: 294px;
+}
+
 .portfolio-card {
   flex: 1 1 28%;
-  height: 294px;
-  margin-bottom: 30px;
-  margin-top: 50px;
+  border: 1px solid #ececec;
+  height: 404px;
+  margin-top: 30px;
 }
 
 .portfolio-title {
