--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ body {
 .do-card {
   flex: 1 1 28%;
   height: 294px;
+  position: relative;
 }
 
 .do-card img,
@@ -186,6 +187,23 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.do-card-title {
+  font-weight: 700;
+  color: #ffffff;
+  text-transform: uppercase;
+  height: 70px;
+  overflow: hidden;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(47, 48, 58, 0.8);
 }
 
 .team-card {
@@ -282,6 +300,9 @@ body {
   border: 1px solid #ececec;
   height: 404px;
   margin-top: 30px;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
 }
 
 .portfolio-title {
@@ -296,4 +317,33 @@ body {
   font-weight: 400;
   color: #757575;
   padding: 20px 24px 0;
+}
+
+.portfolio-hover-desc {
+  font-size: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease, font-size 0.3s ease;
+  color: #ffffff;
+  padding: 10px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  top: 0;
+  background: rgba(33, 150, 243, 0.9);
+  z-index: 1;
+}
+
+.portfolio-card:hover .portfolio-hover-desc {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  opacity: 1;
+}
+
+.hover-container {
+  position: relative;
 }
