--- a/css/style.css
+++ b/css/style.css
@@ -104,10 +104,23 @@ body {
 
 .hero {
   height: 600px;
-  background: #2f303a;
   display: flex;
   align-items: center;
   text-align: center;
+  position: relative;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../images/office_photo.jpg") no-repeat center center;
+  background-size: cover;
+  filter: brightness(40%);
+  z-index: -1;
 }
 
 .hero-title {
