--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,18 @@ body {
   text-align: justify;
 }
 
+.about-card-icon {
+  background: #f5f4fa;
+  width: 270px;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin-bottom: 30px;
+  border-radius: 7px;
+}
+
 /* DO */
 
 .do {
