--- a/css/style.css
+++ b/css/style.css
@@ -267,16 +267,70 @@ body {
   background: rgba(47, 48, 58, 0.8);
 }
 
-.team-card {
-  flex: 1 1 25%;
-  height: 368px;
-}
-
 /* TEAM */
 
 .team {
   background: #f5f4fa;
   padding: 94px 0;
+  height: 708px;
+}
+
+.team-card-wrapper {
+  max-width: 270px;
+  background: #fff;
+  flex: 1 1 28%;
+}
+
+.team-card {
+  flex: 1 1 25%;
+  height: 270px;
+}
+
+.team-card-name {
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  padding-top: 30px;
+}
+.team-card-profession {
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+  color: #757575;
+  padding-top: 10px;
+}
+
+.team-links-items {
+  padding-top: 16px;
+}
+
+.team-links-list {
+  padding-bottom: 30px;
+}
+
+.team-links-items-link {
+  display: block;
+  line-height: 1px;
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.team-links-items-link:hover {
+  background: #2196f3;
+}
+
+.team-links-items-link-icon {
+  width: 20px;
+  height: 20px;
+  fill: #757575;
+}
+
+.team-links-items:hover .team-links-items-link-icon {
+  fill: #fff;
 }
 
 /* PORTFOLIO */
@@ -507,20 +561,17 @@ body {
   line-height: 16.4px;
   padding-bottom: 12px;
 }
-.footer-links-list {
+.footer-links-list,
+.team-links-list {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 10px;
 }
 
-/* .footer-links-items:hover .footer-links-items-link-icon {
-  fill: #2196f3;
-} */
-
 .footer-links-items-link {
   display: block;
-  line-height: 10px;
+  line-height: 1px;
   width: 44px;
   height: 44px;
   background: #5d5656;
