--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,10 @@ body {
   position: relative;
 }
 
+.header-burger {
+  display: none;
+}
+
 /* HERO */
 
 .hero {
@@ -176,7 +180,7 @@ body {
 
 .about-card-icon {
   background: #f5f4fa;
-  width: 270px;
+  width: 100%;
   height: 120px;
   display: flex;
   justify-content: center;
@@ -591,4 +595,105 @@ body {
   width: 20px;
   height: 20px;
   fill: #ffffff;
+}
+
+/* 1200px */
+
+@media (max-width: 1200px) {
+  .header-logo {
+    margin-right: 40px;
+  }
+  .header-menu,
+  .header-menu-right {
+    gap: 20px;
+  }
+}
+
+/* 992px */
+
+@media (max-width: 992px) {
+  .about {
+    padding: 60px 0 0;
+  }
+
+  .about-title {
+    text-align: center;
+  }
+
+  .about-cards {
+    flex-wrap: wrap;
+  }
+
+  .about-card {
+    flex: 1 1 45%;
+  }
+
+  .team-card {
+    flex: 1 1 45%;
+  }
+}
+
+/* 768px */
+
+@media (max-width: 768px) {
+  .header-menu,
+  .header-menu-right {
+    display: none;
+  }
+
+  .header-logo img {
+    width: 134px;
+    height: 28px;
+  }
+
+  .header {
+    padding: 19px 0 20px;
+  }
+
+  .header-burger {
+    display: block;
+    position: relative;
+    width: 24px;
+    height: 16px;
+    cursor: pointer;
+  }
+  .header-burger::before,
+  .header-burger::after,
+  span {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 3px;
+    width: 100%;
+    background: #212121;
+  }
+
+  .header-burger span {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .header-burger::after {
+    top: auto;
+    bottom: 0;
+  }
+
+  .do {
+    display: none;
+  }
+}
+
+/* 600px */
+
+@media (max-width: 600px) {
+  .hero {
+    height: 400px;
+  }
+  .hero-title {
+    font-size: 26px;
+  }
+  .about-card {
+    flex: 1 1 100%;
+  }
 }
